# seq-actor

./: .gitignore  Cargo.toml  justfile
.github/workflows/: ci-linux.yml  ci-macos.yml  claude-code-review.yml
crates/compiler/: Cargo.toml
crates/compiler/src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs  typechecker.rs  types.rs
crates/compiler/src/codegen/: mod.rs  runtime.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: actor.rs  builtins.rs  lib.rs  value.rs
docs/: LANGUAGE_DESIGN.md
examples/: counter.act  factorial.act  hello.act  ping_pong.act  traffic_light.act
std/: io.act  lists.act  prelude.act
