[package]
name = "seq-actor-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Runtime library for seq-actor compiled programs"

[lib]
name = "seq_actor_runtime"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
may.workspace = true
seq-core.workspace = true
